Fixed padding bug on iPhone

--- a/client/css/poll.styl
+++ b/client/css/poll.styl
@@ -37,6 +37,7 @@
       font-size: 32px
       font-weight: bold
       height: 50%
+      padding: 0
       width: 100%
       &:active
         background: url("/images/ui/noise.png"), linear-gradient(#5e5e5e, #757575)
